--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,16 +11,11 @@
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
-$portfolio-07-2025-primary: mat.define-palette(mat.$indigo-palette);
-$portfolio-07-2025-accent: mat.define-palette(
-  mat.$pink-palette,
-  A200,
-  A100,
-  A400
-);
+$portfolio-07-2025-primary: mat.define-palette(mat.$grey-palette, 300);
+$portfolio-07-2025-accent: mat.define-palette(mat.$grey-palette, 800);
 
 // The warn palette is optional (defaults to red).
-$portfolio-07-2025-warn: mat.define-palette(mat.$red-palette);
+$portfolio-07-2025-warn: mat.define-palette(mat.$deep-orange-palette, 500);
 
 // Create the theme object. A theme consists of configurations for individual
 // theming systems such as "color" or "typography".
@@ -52,12 +47,7 @@ html,
 body {
   height: 100%;
   padding-block: 0.5rem;
-}
-body {
-  margin: 0;
-  .poppins-regular {
-    font-family: "Poppins", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-  }
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-style: normal;
 }
